--- a/index.html
+++ b/index.html
@@ -1,36 +1,7 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <link rel="manifest" crossorigin="anonymous" href="./manifest.json" />
-        <link
-            rel="apple-touch-icon"
-            sizes="180x180"
-            href="./src/assets/favicon/apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./src/assets/favicon/favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="./src/assets/favicon/favicon-16x16.png"
-        />
-        <meta name="theme-color" content="#0080DF" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, orientation=portrait" />
-        <link rel="preload" href="./src/assets/fonts/BPdotsSquareVF.ttf" as="font" type="font/ttf" crossorigin>
-        <link rel="preload" href="./src/assets/fonts/ZxGamut-Variable.woff2" as="font" crossorigin>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.3/p5.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/p5.sound@0.2.0/dist/p5.sound.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="./src/css/style.css" />
-    </head>
-    <body>
-        <div id="app" class="app"></div>
-        <div id="breadcrumb-container"></div>
-        <script type="module" src="./src/app.js"></script>
-        <script type="module" src="./src/views/elements/p5-element.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang=en><link rel=manifest crossorigin=anonymous href=https://softlaunch.net/manifest.webmanifest><link rel=apple-touch-icon sizes=180x180 href=https://softlaunch.net/apple-touch-icon.95ac3b9b.png><link rel=icon type=image/png sizes=32x32 href=https://softlaunch.net/favicon-32x32.e3c31236.png><link rel=icon type=image/png sizes=16x16 href=https://softlaunch.net/favicon-16x16.6c60e6c4.png><meta name=theme-color content=#0080DF><meta name=viewport content="width=device-width, initial-scale=1.0, user-scalable=no, orientation=portrait"><link rel=preload href=https://softlaunch.net/BPdotsSquareVF.25fec6ee.ttf as=font type=font/ttf crossorigin><link rel=preload href=https://softlaunch.net/ZxGamut-Variable.6528b92f.woff2 as=font crossorigin><script src=https://cdnjs.cloudflare.com/ajax/libs/p5.js/2.0.3/p5.min.js></script><script src=https://cdn.jsdelivr.net/npm/p5.sound@0.2.0/dist/p5.sound.min.js></script><link rel=stylesheet href=https://softlaunch.net/softlaunch_net.848cd5de.css><body>
+        <div id=app class=app></div>
+        <div id=breadcrumb-container></div>
+        <script type=module src=https://softlaunch.net/softlaunch_net.2174fcf3.js></script>
+        <script type=module src=https://softlaunch.net/softlaunch_net.7285376b.js></script>
+    
+
