--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             sizes="16x16"
             href="./src/assets/favicon/favicon-16x16.png"
         />
-        <meta name="theme-color" content="#0080DF" />
+        <meta name="theme-color" content="#80BAFF" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, orientation=portrait" />
         <link rel="preload" href="./src/assets/fonts/BPdotsSquareVF.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="./src/assets/fonts/ZxGamut-Variable.woff2" as="font" crossorigin>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.9/p5.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
         <link rel="stylesheet" type="text/css" href="./src/css/style.css" />
         <script type="module" src="./src/app.js"></script>
         <script type="module" src="./src/views/elements/p5-element.js"></script>
